Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#359 closed bug (fixed)

driveinfo brings KDL

Reported by: korli Owned by: axeld
Priority: normal Milestone: R1
Component: System/Kernel Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When I launch driveinfo with the boot harddisk device path as argument, it brings KDL in block_io kernel module.

Attachments (1)

driveinfoKDL.JPG (83.4 KB ) - added by korli 19 years ago.
driveinfo backtrace

Download all attachments as: .zip

Change History (7)

comment:1 by korli, 19 years ago

Cc: axeld@… added

revision 16889.

in src/add-ons/kernel/generic/block_io/block_io.c:find_bios_drive_info(), the local variable "drive" is set to NULL, and then accessed with : if (drive-

bios_id == 0) {

TODO items in this file should be fixed to solve this bug anyway.

comment:2 by axeld, 19 years ago

Owner: changed from marcusoverhagen to axeld

by korli, 19 years ago

Attachment: driveinfoKDL.JPG added

driveinfo backtrace

comment:3 by axeld, 19 years ago

Fixed in hrev16929. The BIOS ioctl()s just return B_ERROR for now.

comment:4 by axeld, 19 years ago

Resolution: fixed

comment:5 by axeld, 19 years ago

Status: newclosed

comment:6 by korli, 19 years ago

tested ok

Note: See TracTickets for help on using tickets.