Disabled the BIOS drive stuff completely for now, this fixes bug #359.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16929 a95241bf-73f2-0310-859d-f6bbb57e9c96